--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "lec1",
+  "name": "techNotes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.15.0",
     "mongoose": "^7.3.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
-    "uuid": "^9.0.0",
-    "validator": "^13.9.0",
-    "winston": "^3.9.0"
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
